fix: docs markdown formatting and removed embedded open API spec

--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -95,12 +95,15 @@ a.mantine-Button-root:hover {
   padding: 1rem;
   height: auto;
 }
+
 .navbar__item {
   position: relative;
 }
+
 .navbar__item:hover {
   color: var(--mantine-primary-color-filled);
 }
+
 .navbar__item.navbar__link--active:before,
 .navbar__item .navbar__link.active:before {
   content: "";
@@ -110,6 +113,7 @@ a.mantine-Button-root:hover {
   left: 0;
   bottom: -8px;
 }
+
 .navbar__items.navbar__items--right {
   flex-direction: row-reverse;
 }
@@ -154,24 +158,26 @@ nav.menu .menu__list {
   padding-left: 0;
 }
 
-nav.menu li > .menu__link {
+nav.menu li>.menu__link {
   font-size: 14px;
 }
 
-nav.menu li > .menu__link:not(.menu__link--active) {
+nav.menu li>.menu__link:not(.menu__link--active) {
   font-weight: 400;
 }
-nav.menu li > .menu__link.menu__link--active {
+
+nav.menu li>.menu__link.menu__link--active {
   font-weight: 600;
 }
 
-nav.menu li > .menu__list-item-collapsible {
+nav.menu li>.menu__list-item-collapsible {
   font-size: 12px;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-nav.menu li > .menu__list-item-collapsible .menu__link {
+
+nav.menu li>.menu__list-item-collapsible .menu__link {
   color: var(--mantine-color-gray-filled);
 }
 
@@ -193,7 +199,7 @@ nav.menu li > .menu__list-item-collapsible .menu__link {
 
 /* TABLE */
 table {
-  display: table;
+  table-layout: fixed;
   width: 100%;
 }
 
@@ -227,4 +233,11 @@ table tr:last-of-type td {
   border-bottom: 1px solid;
   /* border-bottom: calc(0.0625rem * var(--mantine-scale)) solid; */
   border-color: var(--mantine-color-default-border);
+}
+
+table th,
+table td {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
